boltffi_bindgen/src/render/kotlin/snapshots/boltffi_bindgen__render__kotlin__templates__tests__snapshot_async_function_returning_string.snap
---
source: boltffi_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---

suspend fun fetchData(url: String): String = boltffiCallAsync(
    createFuture = {
        val urlWire = WireWriterPool.acquire(BoltFFIWire.sizeString(url))
        try {
            run {
                val wire = urlWire.writer
                BoltFFIWire.writeString(url)
            }
            Native.boltffi_fetch_data(urlWire.ptr, urlWire.len)
        } finally {
            urlWire.close().close()
        }
    },
    poll = { future, contHandle -> Native.boltffi_fetch_data_poll(future, contHandle) },
    complete = { future ->
        val buf = Native.boltffi_fetch_data_complete(future) ?: throw FfiException(-1, "Null buffer returned")
        val reader = WireReader(buf)
        reader.readString()
    },
    free = { future -> Native.boltffi_fetch_data_free(future) },
    cancel = { future -> Native.boltffi_fetch_data_cancel(future) }
)
