boltffi_bindgen/src/render/kotlin/snapshots/boltffi_bindgen__render__kotlin__templates__tests__snapshot_enum_with_byte_tag_type.snap
---
source: boltffi_bindgen/src/render/kotlin/templates.rs
assertion_line: 634
expression: template.render().unwrap()
---
enum class PacketKind(val value: Byte) {
    Ping((0L).toByte()),
    Pong((255L).toByte());

    companion object {
        fun fromValue(value: Byte): PacketKind = entries.first { it.value == value }
    }
}
